# LLM-Agents

./: .gitignore  pyproject.toml  q
src/llm_agents/: main.py
src/model/: bigquey_reader_model.py  etl_model.py  gcs_writer_model.py
